# ai-medical-imaging-open

./: .gitignore  CLAUDE.md  README.md  REPO_RULES.md  analyze_failure_themes.py  balanced_accuracy.py  biomedclip_classifier.py  biomedclip_embeddings.py  clean_captions.py  grading_rubrick.md  medgemma_prompt_ablation.py  medsiglip_embeddings.py  pipeline.py  plot_umap.py  poster-prep.md  progress_log.md  pyproject.toml  run_pathology_anti_bias_ablation.py  train_embedding_classifier.py  utils.py
.github/: copilot-instructions.md
captions/: captions_cleaned.jsonl  captions_cleaned_labeled.jsonl
captions/baseline/: captions.jsonl
captions/binary_choice/: captions.jsonl
configs/: llama_hard_cases.yaml  medgemma_ablation.yaml  pathology_anti_bias_ablation.yaml  prompts.yaml
docs/internal/: REPO_RULES.md  ollama_vision_smoke_test.py  progress_log.md
embeddings/: biomedclip_embeddings.npz
indices/: create_indices.py  melanoma_nevus_indices.json  melanoma_nevus_indices_regex.json  review_candidates.jsonl
notebooks/: MedGemma_Experimentation.ipynb  MedGemma_Experimentation_v2.ipynb  MedGemma_Local_Windows.ipynb
poster/: poster.aux  poster.fdb_latexmk  poster.fls  poster.tex  poster_template.aux  poster_template.tex  tueposter2018.sty
results/: balanced_accuracy.json  balanced_accuracy_exclude_spitz.json  biomedclip_results.json  biomedclip_results_exclude_spitz.json  failure_theme_analysis.json  medsiglip_results.json  medsiglip_results_exclude_spitz.json  svm_failure_comparison.json
results/archive/: ollama_vision_smoke_test.json
(+59 files in other folders)
